--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,7 @@ classifiers = [
 ]
 
 dependencies = [
-  "numpy",
-  "scipy",
-  "xarray",
+  "xarray[complete]",
 ]
 
 [project.optional-dependencies]
