--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "ooi-2025-summer-school-acoustics"
 dynamic = ["version"]
 description = 'Repository with code and notebooks for the 2025 OOI summer school on acoustics'
-readme = "README.md"
+readme = "readme.md"
 requires-python = ">=3.8"
 license = "MIT"
 keywords = []
@@ -25,6 +25,7 @@ classifiers = [
 
 dependencies = [
   "xarray[complete]",
+  "ipykernel"
 ]
 
 [project.optional-dependencies]
