--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,6 +12,8 @@ build:
     - pip install -e ".[docs]"
     # Run api-doc to generate API documentation
     - sphinx-apidoc -f -o docs/ .
+    # Build the documentation
+    - sphinx-build -b html docs/ $READTHEDOCS_OUTPUT/html
 
 sphinx:
   configuration: docs/conf.py
