Included das4whales in the dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,12 @@ classifiers = [
 
 dependencies = [
   "xarray[complete]",
-  "ipykernel"
+  "ipykernel",
+  "das4whales@git+https://github.com/DAS4Whales/DAS4Whales"
 ]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [project.optional-dependencies]
 dev = [
