Basic das4whales dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 dependencies = [
   "xarray[complete]",
   "ipykernel",
-  "das4whales@git+https://github.com/DAS4Whales/DAS4Whales"
+  "das4whales@git+https://github.com/DAS4Whales/DAS4Whales@ooi-2025"
 ]
 
 [tool.hatch.metadata]
