--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,8 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 
+# environment.yml used for environment management
 dependencies = [
-  "xarray[complete]",
-  "ipykernel",
-  "das4whales@git+https://github.com/DAS4Whales/DAS4Whales@ooi-2025"
 ]
 
 [tool.hatch.metadata]
