--- a/environment.yml
+++ b/environment.yml
@@ -20,3 +20,4 @@ dependencies:
     - das4whales@git+https://github.com/DAS4Whales/DAS4Whales@ooi-2025
     - -e . # Install 2025-Summer-School-Acoustics as python package in 'editable mode'
     - xrsignal
+    - ooipy
